tests/snapshots/assets__check_file@import.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/import.typ
---
#import "src/anchor.typ" as anchor_
