tests/snapshots/assets__check_file@line-comment.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/comment/line-comment.typ
---
#{
  // test
  /*
  if direction == "bottom" {
  draw.line(a, (rel: (0, -grow/3)), ((), "-|", b), b)
  } else if direction == "up" {
  draw.line(a, (rel: (0, grow/3)), ((), "-|", b), b)
  } else if direction == "left" {
  draw.line(a, (rel: (-grow/3, 0)), ((), "|-", b), b)
  } else if direction == "right" {
  draw.line(a, (rel: (grow/3, 0)), ((), "|-", b), b)
  }
  */
}
